--- a/MADELON.ipynb
+++ b/MADELON.ipynb
@@ -18,7 +18,7 @@
     "import urllib.request as urllib2\n",
     "import numpy as np\n",
     "import time\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "from sklearn import metrics\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -248,7 +248,7 @@
     "plt.xlabel('Scores')\n",
     "plt.ylabel('Frequency')\n",
     "print(\"Accuracy\", metrics.accuracy_score(y_val, y_pred_svc_linear))\n",
-    "#The mean score and the 54% confidence interval of the score estimate are hence given by:\n",
+    "#The mean score and the * confidence interval of the score estimate are hence given by:\n",
     "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
@@ -316,7 +316,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "svc_rbf = SVC(kernel = 'rbf')   #kernel linear, rbf vs...\n",
+    "svc_rbf = SVC(kernel = 'linear')   #kernel linear, rbf vs...\n",
     "svc_rbf.fit(X_train, y_train)\n",
     "y_pred_svc_rbf = svc_rbf.predict(X_val)\n",
     "\n",
@@ -341,19 +341,39 @@
     "plt.xlabel('Scores')\n",
     "plt.ylabel('Frequency')\n",
     "print(\"Accuracy\", metrics.accuracy_score(y_val, y_pred_svc_rbf))\n",
-    "#The mean score and the 54% confidence interval of the score estimate are hence given by:\n",
+    "#The mean score and the * confidence interval of the score estimate are hence given by:\n",
     "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
+      "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n",
       "C:\\Users\\damga\\Anaconda1\\lib\\site-packages\\sklearn\\svm\\base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
       "  \"avoid this warning.\", FutureWarning)\n"
      ]
@@ -362,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 0.13663458824157715 seconds\n",
+      "Runtime: 22.45540499687195 seconds\n",
       "Confusion matrix:\n",
       "[[254  46]\n",
       " [147 153]]\n",
@@ -387,7 +407,7 @@
     }
    ],
    "source": [
-    "#applying SVM after applying PCA \n",
+    "# Performing SVM after applying PCA \n",
     "\n",
     "start_time = time.time()\n",
     "\n",
@@ -399,6 +419,10 @@
     "y_pred_svc_rbf_pca = svc_rbf_pca.predict(X_val_pca)\n",
     "\n",
     "end_time = time.time()\n",
+    "\n",
+    "# 10-Fold Cross-validation\n",
+    "\n",
+    "scores = cross_val_score(svc_rbf_pca, X_train, y_train, cv=10)\n",
     "\n",
     "# Evaluation of the model’s performance\n",
     "\n",
@@ -415,7 +439,7 @@
     "plt.xlabel('Scores')\n",
     "plt.ylabel('Frequency')\n",
     "print(\"Accuracy\", metrics.accuracy_score(y_val, y_pred_svc_rbf_pca))\n",
-    "#The mean score and the 54% confidence interval of the score estimate are hence given by:\n",
+    "#The mean score and the * confidence interval of the score estimate are hence given by:\n",
     "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
    ]
   },
